--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       <h2>Contact</h2>
       <p>
         Feel free to get in touch for project collaborations or freelance opportunities.<br><br>
-        📧 Email: <a href="mailto:you@example.com">you@example.com</a><br>
-        📞 Phone: (123) 456-7890
+        📧 Email: <a href="mailto:cinydchen@gmail.com">cinydchen@gmail.com</a><br>
+        
       </p>
     </div>
   </div>
