--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div id="about" class="section about">
       <h2>About Me</h2>
       <p>
-        I'm a creative web developer with a passion for clean design and intuitive user experiences. With a background in design and years of coding practice, I specialize in building modern websites that balance function and aesthetics.
+        something about me im so cool.
       </p>
     </div>
 
