--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="content">
     <div id="work" class="section work active">
       <h2>Hi, I'm Cindy!</h2>
-      <p>I am a graphic designer and something else blah blah </p>
+      <p>Under Construction! visit <a href="https://www.notion.so/Cindy-Chen-18cb27fd982380dbb76fe6ed319b4b4a?pvs=4>here for current portfolio</a> </p>
       <div class="image-entry">
         <div class="image-title">Project One</div>
         <div class="image-link">
@@ -39,7 +39,7 @@
     <div id="about" class="section about">
       <h2>About Me</h2>
       <p>
-        something about me im so cool.
+        Hi, I'm Cindy! I was born and raised in the hustle and bustle of New York City. I have a Bachelor's degree in Graphic & Media Design from Alfred State college.  I am well versed in the Adobe Suite; including Photoshop, Illustrator, Indesign and many others. Besides that, I am interested in brand design, merchandise design, video editing, and illustration. When I am not behind a computer screen, you can find me exploring the world, and capturing my adventures with my digicams. 
       </p>
     </div>
 
