--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="sidebar">
     <div class="logo">
-      <img src="./images/bunny.png" alt="Logo">
+      <img src="./images/cat.png" alt="Logo">
     </div>
     <div class="nav-links">
       <a href="#" data-target="work">work</a>
@@ -21,7 +21,9 @@
   <div class="content">
     <div id="work" class="section work active">
       <h2>Hi, I'm Cindy!</h2>
-      <p>Under Construction! visit <a href="https://www.notion.so/Cindy-Chen-18cb27fd982380dbb76fe6ed319b4b4a?pvs=4>here for current portfolio</a> </p>
+      <p>
+        under construction! visit <a href="https://www.notion.so/Cindy-Chen-18cb27fd982380dbb76fe6ed319b4b4a?pvs=4">here for current portfolio</a>
+</p>
       <div class="image-entry">
         <div class="image-title">Project One</div>
         <div class="image-link">
@@ -39,7 +41,7 @@
     <div id="about" class="section about">
       <h2>About Me</h2>
       <p>
-        Hi, I'm Cindy! I was born and raised in the hustle and bustle of New York City. I have a Bachelor's degree in Graphic & Media Design from Alfred State college.  I am well versed in the Adobe Suite; including Photoshop, Illustrator, Indesign and many others. Besides that, I am interested in brand design, merchandise design, video editing, and illustration. When I am not behind a computer screen, you can find me exploring the world, and capturing my adventures with my digicams. 
+       
       </p>
     </div>
 
